--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+NODE_ENV= development
 PORT=5000
 DATABASE_URI=mongodb+srv://practice-mongoose:D5baQ4FtVZxdA2DV@cluster0.kttkhnp.mongodb.net/learn_mongoose?retryWrites=true&w=majority&appName=Cluster0
