--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "typescript-eslint": "^8.14.0"
   },
   "dependencies": {
+    "@types/validator": "^13.12.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
     "mongoose": "^8.8.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "validator": "^13.12.0",
+    "zod": "^3.23.8"
   }
 }
