--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.97",
